[package]
name = "better-ronin-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features= ["full"]}
url = "2.2.2"
web3 = "0.18.0"
serde = {version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"
clap = { version = "3.2.8", features = ["derive", "suggestions", "color"] }
mongodb = { version = "2.3.0", features = ["tokio-runtime"]}
hex-literal = "0.3.4"
fstrings = "0.2.4-rc2"
sha2 = "0.10.2"